bug fixes
removed extra error callback
added course truncation if name is too long
hid login error by default
login error message hides on reattempt
added save confirmation to options page

--- a/hac.css
+++ b/hac.css
@@ -219,6 +219,11 @@ body.logged_in #grades {
 
 #grades td:first-child {
 	text-align: left;
+	width: 120px;
+	overflow: hidden;
+	white-space: nowrap;
+	display: block;
+	text-overflow: ellipsis;
 }
 
 #update_wrapper, #lastupdated {
